created base files
crated the stylesheet and java-script files in the assets folder, and also added images folder for further use in future

wrote a basic css and js code for testing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    Hello World
+<body onload="draw()">
+    <jsr>Hello World</jsr>
+    <p></p>
+    <canvas id="tircolor" width="300" height="200" style="border: 1px; background-color:rgb(255, 0, 0);"></canvas>
 </body>
+<script src="assets/js/main.js"></script>
 </html>
