--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -11,12 +11,12 @@
     <nav class="navbar navbar-expand-lg">
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html" ><nc>Home</nc></a>
-                <a class="nav-link" href="AboutMe.html"><nc>About Me</nc></a>
-                <a class="nav-link" href="portfolio.html"><nc>Portfolio</nc></a>
-                <a class="nav-link" href="skills.html"><nc>Skills</nc></a>
-                <a class="nav-link" href="projects.html"><nc>Projects</nc></a>
-                <a class="nav-link" href="contact.html"><nc>Contact</nc></a>
+              <a class="nav-link" href="index.html" ><nc>Home</nc></a>
+              <a class="nav-link active" aria-current="page" href="AboutMe.html"><nc>About Me</nc></a>
+              <a class="nav-link" href="portfolio.html"><nc>Portfolio</nc></a>
+              <a class="nav-link" href="skills.html"><nc>Skills</nc></a>
+              <a class="nav-link" href="projects.html"><nc>Projects</nc></a>
+              <a class="nav-link" href="contact.html"><nc>Contact</nc></a>
             </div>
         </div>
       </nav>
