File name changed
AboutMe.html to aboutme.html

--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="index.html" ><nc>Home</nc></a>
-              <a class="nav-link" href="AboutMe.html"><nc>About Me</nc></a>
+              <a class="nav-link" href="aboutme.html"><nc>About Me</nc></a>
               <a class="nav-link" href="portfolio.html"><nc>Portfolio</nc></a>
               <a class="nav-link active" aria-current="page" href="skills.html"><nc>Skills</nc></a>
               <a class="nav-link" href="projects.html"><nc>Projects</nc></a>
