--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <nav class="navbar navbar-expand-lg">
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html" ><nc>Home</nc></a>
-                <a class="nav-link" href="aboutMe.html"><nc>About Me</nc></a>
-                <a class="nav-link" href="portfolio.html"><nc>Portfolio</nc></a>
-                <a class="nav-link" href="skills.html"><nc>Skills</nc></a>
-                <a class="nav-link" href="projects.html"><nc>Projects</nc></a>
-                <a class="nav-link" href="contact.html"><nc>Contact</nc></a>
+                <a class="nav-link nav-item" style="color: brown;" aria-current="page" href="index.html" >Home</a>
+                <a class="nav-link nav-item" href="aboutMe.html">About Me</a>
+                <a class="nav-link nav-item" href="portfolio.html">Portfolio</a>
+                <a class="nav-link nav-item" href="skills.html">Skills</a>
+                <a class="nav-link nav-item" href="projects.html">Projects</a>
+                <a class="nav-link nav-item" href="contact.html">Contact</a>
             </div>
         </div>
-      </nav>
+    </nav>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
