--- a/index.html
+++ b/index.html
@@ -8,18 +8,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bodybgcolor">
-    <nav class="navbar navbar-expand-lg">
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link nav-item" style="color: brown;" aria-current="page" href="index.html" >Home</a>
-                <a class="nav-link nav-item" href="aboutMe.html">About Me</a>
-                <a class="nav-link nav-item" href="portfolio.html">Portfolio</a>
-                <a class="nav-link nav-item" href="skills.html">Skills</a>
-                <a class="nav-link nav-item" href="projects.html">Projects</a>
-                <a class="nav-link nav-item" href="contact.html">Contact</a>
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link nav-item" style="color: brown;" aria-current="page" href="index.html" >Home</a>
+                    <a class="nav-link nav-item" href="aboutMe.html">About Me</a>
+                    <a class="nav-link nav-item" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link nav-item" href="skills.html">Skills</a>
+                    <a class="nav-link nav-item" href="projects.html">Projects</a>
+                    <a class="nav-link nav-item" href="contact.html">Contact</a>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <section>
+            <article>
+                
+            </article>
+            <article>
+                <hr class="hr">
+                <div class="footer">
+                    © 2024 All Rights Reserved
+                    <p>Jashwanth SR</p>
+                </div>
+            </article>
+        </section>
+    </footer>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
