--- a/projects.html
+++ b/projects.html
@@ -8,18 +8,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bodybgcolor">
+  <header>
     <nav class="navbar navbar-expand-lg">
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link nav-item" href="index.html" ><nc>Home</nc></a>
-                <a class="nav-link nav-item" href="aboutMe.html"><nc>About Me</nc></a>
-                <a class="nav-link nav-item" href="portfolio.html"><nc>Portfolio</nc></a>
-                <a class="nav-link nav-item" href="skills.html"><nc>Skills</nc></a>
-                <a class="nav-link nav-item" style="color: brown;" aria-current="page" href="projects.html"><nc>Projects</nc></a>
-                <a class="nav-link nav-item" href="contact.html"><nc>Contact</nc></a>
-            </div>
-        </div>
-    </nav>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+              <a class="nav-link nav-item" href="index.html" ><nc>Home</nc></a>
+              <a class="nav-link nav-item" href="aboutMe.html"><nc>About Me</nc></a>
+              <a class="nav-link nav-item" href="portfolio.html"><nc>Portfolio</nc></a>
+              <a class="nav-link nav-item" href="skills.html"><nc>Skills</nc></a>
+              <a class="nav-link nav-item" style="color: brown;" aria-current="page" href="projects.html"><nc>Projects</nc></a>
+              <a class="nav-link nav-item" href="contact.html"><nc>Contact</nc></a>
+          </div>
+      </div>
+  </nav>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+      
+  </footer>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
