--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="bodybgcolor">
+<body style="background-color: #1b253f;">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
@@ -31,8 +31,8 @@
                 
             </article>
             <article>
-                <hr class="hr">
                 <div class="footer">
+                    <hr class="hr">
                     © 2024 All Rights Reserved
                     <p>Jashwanth SR</p>
                 </div>
